fixed text alignment in home page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,6 +19,7 @@ section#home-1{
 }
 
 section#home-2{
+  text-align: center;
   margin-top:0.2rem;
   padding-bottom: 2rem; 
   div.col{
